# MermaidUI

./: .gitignore  CHANGELOG.md  PACKAGING_GUIDE.md  README.md  RELEASES.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/: copilot-instructions.md
.github/workflows/: release.yml
backend/: package-lock.json  package.json
backend/src/: database.ts  index.ts
backend/src/routes/: collections.ts  diagrams.ts  export.ts
docs/: zoom-control-feature-plan.md
scripts/: dev.js  release.cjs  version.js
src/: App.css  App.tsx  ThemeContext.tsx  api.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: database.rs  main.rs
src/components/: CollectionsBrowser.css  CollectionsBrowser.tsx  ConfirmModal.css  ConfirmModal.tsx  DiagramEditor.css  DiagramEditor.tsx  DiagramPreview.css  DiagramPreview.tsx  ExportMenu.css  ExportMenu.tsx  ExportProgressModal.css  ExportProgressModal.tsx  ResizableSplit.css  ResizableSplit.tsx  ThemeToggle.tsx  ZoomControls.css  ZoomControls.tsx
