[package]
name = "mermaid-ui"
version = "1.3.0"
description = "Mermaid diagram viewer and editor"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "fs-create-dir", "fs-remove-dir", "fs-read-file", "fs-remove-file", "fs-write-file", "fs-read-dir", "fs-exists", "shell-open", "dialog-save", "path-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
